ckad/1.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: r-pod
  name: r-pod
spec:
  containers:
    - image: nginx
      name: r-pod
      readinessProbe:
        httpGet:
          path: /
          port: 80
        initialDelaySeconds: 10
        periodSeconds: 60
      livenessProbe:
        httpGet:
          path: /
          port: 80
        failureThreshold: 1
        periodSeconds: 60
