ckad/am.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: kplabs-ambassador-pod
  name: kplabs-ambassador-pod
spec:
  containers:
    - image: mykplabs/kubernetes:nginx
      name: kplabs-ambassador-pod
    - image: haproxy:1.7
      name: haproxy-container
      ports:
        - containerPort: 80
      volumeMounts:
        - name: config-volume
          mountPath: /usr/local/etc/haproxy/haproxy.cfg
  volumes:
    - name: config-volume
      configMap:
        name: kplabs-ambassador-config
