ckad/blue-green-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: blue
spec:
  containers:
    - name: test-container
      image: nginx
      command: [ "sh", "-c"]
      args:
      - "echo welcome to $(MY_POD_NAME) pod > /usr/share/nginx/html/index.html;service nginx restart;sleep 3600;"
  restartPolicy: Never
