ckad/chipmonk-canary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: chipmonk
  name: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chipmonk
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: chipmonk
    spec:
      volumes:
      - name: sharedvol
        emptyDir: {}
      containers:
      - image: httpd
        name: httpd

          volumeMounts:
          - name: sharedvol
            mountPath: /var/www/html
        resources: {}
status: {}
