ckad/mcpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: kplabs-multi-container
  name: kplabs-multi-container
spec:
  containers:
  - image: nginx
    name: first-container
  - image: mykplabs/kubernetes:nginx
    name: second-container
  - image: busybox
    name: third-container
    command: ["/bin/sh", "-c", "sleep 3600"]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
