ckad/mxpod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: kplabs-multi-container
  name: kplabs-multi-container
spec:
  containers:
  - image: nginx
    name: kplabs-multi-container
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
