ckad/q13.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: question-13-pod
  name: question-13-pod
spec:
  containers:
  - image: kubegoldenguide/question-thirteen
    name: question-13-pod
    readinessProbe:
      httpGet:
        path: /health
        port: 8080
      initialDelaySeconds: 60
      periodSeconds: 5
    livenessProbe:
      httpGet:
        path: /health
        port: 8080
      initialDelaySeconds: 75
      periodSeconds: 10
      timeoutSeconds: 5
    resources:
      limits:
        cpu: 1
        memory: 64Mi
      requests:
        cpu: 1
        memory: 32Mi
