ckad/q2.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: question-two-pod
  name: question-two-pod
spec:
  containers:
  - image: kubegoldenguide/alpine-spin:1.0.0
    name: question-two-pod
    resources:
      limits:
        cpu: 1
        memory: 100Mi
      requests:
        cpu: 1
        memory: 64Mi
