ckad/tmp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: chipmonk
  name: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chipmonk
  strategy: {}
  template:
    metadata:
      labels:
        app: chipmonk
    spec:
      volumes:
      - name: sharedvol
        emptyDir: {}
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
        - name: sharedvol
          mountPath: /usr/share/nginx/html
