ckad/vader-service.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: vader-service
  name: vader-service
spec:
  containers:
  - image: ibmcase/millennium-falcon:1
    name: vader-service
    ports:
    - containerPort: 80
    volumeMounts:
    - name: haproxy-vol
      mountPath: /usr/local/etc/haproxy/
  - image: haproxy:1.7
    name: haproxy
    volumeMounts:
    - name: haproxy-vol
      mountPath: /usr/local/etc/haproxy/haproxy.cfg
  volumes:
  - name: haproxy-vol
    configMap:
      name: vader-service-ambassador-config
